--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "name": "my-backend",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-      "@emotion/react": "^11.14.0",
-      "@emotion/styled": "^11.14.0",
-      "@mui/icons-material": "^6.2.1",
-      "@mui/material": "^6.2.1",
-      "axios": "^1.7.9",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.7",
-      "express": "^4.18.2",
-      "mongoose": "^7.5.0",
-      "redoc-express": "^2.1.0",
-      "swagger-jsdoc": "^6.2.8",
-      "swagger-ui-express": "^5.0.1",
-      "web-vitals": "^4.2.4"
-    },
-    "scripts": {
-      "start": "node src/index.js"
-    },
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    }
+  "name": "my-backend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "redoc-express": "^2.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "web-vitals": "^4.2.4",
+    "nodemon": "^3.1.9"  
+  },
+  "scripts": {
+    "start": "node src/index.js",   
+    "dev": "nodemon src/index.js"   
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
-  
+}
