Add build script to resolve Vercel error

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "node src/index.js",   
-    "dev": "nodemon src/index.js"   
+    "dev": "nodemon src/index.js",
+    "build": "echo 'No build process for backend'"  
   },
   "eslintConfig": {
     "extends": [
