--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
         "src": "src/index.js",
         "use": "@vercel/node"
       }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/src/index.js"
+      }
     ]
   }
   
